--- a/speaking.html
+++ b/speaking.html
@@ -100,6 +100,13 @@
 
 							</br>
 							
+								<h3 style="margin-bottom:5px;">Upcoming Techincal University of Galway Astronomy Society</h3>
+								<h5 style="margin-bottom:0px;">May 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
+								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>This  tour for the University of Galway Astronomy Society will explore the history of astronomy at Birr Castle Demesne. The Irish LOw Frequency ARray (I-LOFAR) will be in detail, highlighting country-wide and international research collaborations.
+								</p>
+								<div style="clear:left"></div>
+
+								<hr>
 
 								<h3 style="margin-bottom:5px;">University of Galway Astronomy Society</h3>
 								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
@@ -109,7 +116,7 @@
 
 								<hr>
 
-								<h3 style="margin-bottom:5px;">Upcoming - LFI Dublin</h3>
+								<h3 style="margin-bottom:5px;">LFI Dublin</h3>
 								<h5 style="margin-bottom:0px;">April 2025 - Birr Castle Demesne, Ireland</h5><h6><b>Education and Public Engagment</b></h6>
 								<p><span class="image left"><img src="images/pic05.png" alt=""/></span>Students from the Lycée Français International Samuel Beckett (LFI) school attended the demesne, exploring the history of astronomy at Birr Castle Demesne, from the Leviathan to I-LOFAR.
 								</p>
@@ -307,7 +314,7 @@
 
 								<h3 style="margin-bottom:5px;">ASKAP-MeerKAT Telescope Consortium Meeting</h3>
 								<h5 style="margin-bottom:0px;">April 2021 - Online (Australia & South Africa)</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
-								<p><span class="image left"><img src="images/pic05.jpg" alt="" /></span></p>
+								<p><span class="image left"><img src="images/pic005.jpg" alt="" /></span></p>
 
 								
 
