--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="cv.html" class="button">Learn More</a></li>
+										<li><a href="https://jeremy.ie/cv" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -179,7 +179,7 @@
 
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="speaking.html" class="button">Learn More</a></li>
+										<li><a href="https://jeremy.ie/speaking" class="button">Learn More</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -241,7 +241,7 @@
 							<h2>Get in Touch</h2>
 							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any enquiries.</p>
 							<ul class="actions">
-								<li><a href="speaking.html" class="button">See Previous Talks</a></li>
+								<li><a href="https://jeremy.ie/speaking" class="button">See Previous Talks</a></li>
 							</ul>
 						</section>
 						<section>
