--- a/speaking.html
+++ b/speaking.html
@@ -42,7 +42,7 @@
    				</div>
    				<div class="menu" id="menu">
     			    <a href="https://jeremy.ie" class="active">Home</a>
-					<a href="cv.html">CV</a>
+					<a href="https://jeremy.ie/cv">CV</a>
 					<a href="#cta">Contact</a>
     			</div>
 
@@ -50,7 +50,7 @@
 					<nav id="nav">
 						<ul>
 							<li><a href="https://jeremy.ie" class="active">Home</a></li>
-							<li><a href="cv.html">CV</a></li>
+							<li><a href="https://jeremy.ie/cv">CV</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
@@ -334,7 +334,7 @@
 							<h2>Get in Touch</h2>
 							<p>I welcome opportunities to engage in public speaking, particularly at science festivals, open days, and similar events. Feel free to reach out with any enquiries.</p>
 							<ul class="actions">
-								<li><a href="speaking.html" class="button">See Previous Talks</a></li>
+								<li><a href="https://jeremy.ie/speaking" class="button">See Previous Talks</a></li>
 							</ul>
 						</section>
 						<section>
