Sitemap added, readme updated
Basic sitemap added, readme updated to better reflect website info

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 								</ul>
 								<footer class="major">
 									<ul class="actions special">
-										<li><a href="cv.html" class="button">View Full CV</a></li>
+										<li><a href="https://jeremy.ie/cv" class="button">View Full CV</a></li>
 									</ul>
 								</footer>
 							</section>
@@ -228,7 +228,7 @@
 								<footer class="major">
 									<ul class="actions special">
 										<li><a href="https://github.com/jeremyrigney" class="button primary" target='_blank'>View My Projects</a></li>
-										<!-- <li><a href="cv.html" class="button">Learn More</a></li> -->
+										<!-- <li><a href="https://jeremy.ie/cv" class="button">Learn More</a></li> -->
 									</ul>
 								</footer>
 							</section>
