--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<p>Astrophysicist<span id='mob_only'> & </span><br/>
 						   Science Communicator<br/>
 						   <ul class="icons">
-								<li><a href="https://x.com/jeremyrigney" target="_blank" class="icon brands fa-x-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="https://x.com/jeremyrigney" target="_blank" class="icon brands fa-x-twitter"><span class="label">Twitter / X</span></a></li>
 								<li><a href="https://www.instagram.com/jeremy.rigney/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="https://www.linkedin.com/in/jeremyrigney/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/jeremyrigney" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
