adding cookie consent
Added a consent option for cookies (google analytics)

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         	    }
         	}
     	</script>
+
+
+    	<!--Cookie consent-->
+    	<script src="https://web.cmp.usercentrics.eu/modules/autoblocker.js"></script>
+		<script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="nt7NWEM4FPFze0" async></script>
+
 	</head>
 
 	<!-- Google tag (gtag.js) -->
