--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<a href="#first">Education</a>
 					<a href="#second">Experience</a>
 					<a href="#third">Public Speaking</a>
+					<a href="https://jeremy.ie/dashboard">Dashboard</a>
 					<a href="#cta">Contact</a>
     			</div>
 
@@ -96,6 +97,7 @@
 							<li><a href="#first">Education</a></li>
 							<li><a href="#second">Experience</a></li>
 							<li><a href="#third">Public Speaking</a></li>
+							<li><a href="https://jeremy.ie/dashboard">Dashboard</a></li>
 							<li><a href="#cta">Contact</a></li>
 						</ul>
 					</nav>
