Text update in dashboard
Text update in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -80,7 +80,7 @@
 
 
 		            <ul>
-					  <li>Irish Rail Live Train Information. JavaScript pulls from an API I built running via a flask app. The flask app is hosted on Google Cloud hub. Data updated in realtime (~1 minute).</li>
+					  <li>Irish Rail Live Irish Rail train information. JavaScript pulls real-time data (~1-minute updates) from a custom API that I built with Flask (Python) and hosted on Google Cloud. The API obtains data from the Irish Rail API XML files. More information and upgrades will be added to this widget in time, this is a miniomum working example.</li>
 					  <li>The arXiv summaries pull from the arXiv API, filtered to only search and return papers related to solar and stellar flares (ideally with radio data). This provided an at-a-glance summary of daily papers related to my PhD thesis work.</li>
 					  <li>The weather and lunar phase widgets are pre-built, the only modifications are style and locations.</li>
 					  <li>The GOES live plot pulls data from the GOES satellite live JSON files. The data are live X-ray flux of the full solar disk. Bright peaks correspond to solar flares, classified from A-X, with X being the most powerful (y-axis). THe plot is a 3-day summary, and is near-realtime. It utilises canvasJS to plot the data.</li>
