small text update

--- a/dashboard.html
+++ b/dashboard.html
@@ -91,6 +91,7 @@
 		          <div class="row gtr-uniform">
 		          <div class="col-12">
 		          <h3>Live Irish Rail Train Positions (Interactive)</h3>
+		          New features coming soon...
 				  <div id="trainmap" style=" height: 600px; width: 70%; border-radius:10px; margin:0px auto;"></div>
 				  
 				  </div>
