--- a/speaking.html
+++ b/speaking.html
@@ -278,8 +278,8 @@
 								<hr>
 
 								<h3 style="margin-bottom:5px;">CoolStars21 Conference</h3>
-								<h5 style="margin-bottom:0px;">July 2022 - Toulouse, Ireland</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
-								<p><span class="image left"><img src="images/Coolstars_toulouse.jpeg" alt="" /></span>  </p>		
+								<h5 style="margin-bottom:0px;">July 2022 - Toulouse, France</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
+								<p><span class="image left"><img src="images/Coolstars_toulouse.jpeg" alt="" /></span> Specialist conference on stellar astrophysics hosted at the Pierre Baus Conference Centre from the 4th - 9th July. I presented my research on stellar flares during the 'Solar and stellar coronal mass ejections' session and fielded questions from the audience. Attending the conference was an amazing opportunity to meet researchers from across the world.</p>		
 								<div style="clear:left"></div>						
 
 								<hr>
