added talk desc.

--- a/speaking.html
+++ b/speaking.html
@@ -272,7 +272,7 @@
 
 								<h3 style="margin-bottom:5px;">Irish National Astronomy Meeting</h3>
 								<h5 style="margin-bottom:0px;">August 2022 - DIAS Dunsink Observatory, Dublin, Ireland</h5> <h6><b>Academic &nbsp;|&nbsp; Science Meeting</b></h6>
-								<p><span class="image left"><img src="images/INAM_dublin_2022.jpeg" alt="" /></span>  </p>								
+								<p><span class="image left"><img src="images/INAM_dublin_2022.jpeg" alt="" /></span> I was presented with the Peter Curran Award for best postgraduate presentation.</p>								
 								<div style="clear:left"></div>
 
 								<hr>
