--- a/index.html
+++ b/index.html
@@ -62,9 +62,10 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<!--<span class="logo"><img src="images/logo.svg" alt="" /></span>-->
-						<h1>Jeremy Rigney, PhD</h1>
-						<p>Astrophysicist<span id='mob_only'> & </span><br/>
-						   Science Communicator<br/>
+						<h1>Dr. Jeremy Rigney</h1>
+						<p>Data Scientist<!--<span id='mob_only'> & </span>--> &nbsp;·&nbsp; 
+						Astrophysicist<!--<span id='mob_only'> & </span>--> &nbsp;·&nbsp; 
+						   Communicator<br/>
 						   <ul class="icons">
 								<li><a href="https://x.com/jeremyrigney" target="_blank" class="icon brands fa-x-twitter"><span class="label">Twitter / X</span></a></li>
 								<li><a href="https://www.instagram.com/jeremy.rigney/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -113,7 +114,7 @@
 										<header class="major">
 											<h2>Bio</h2>
 										</header>
-										<p>I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
+										<p>I work as a Data Scientist at LexisNexis Risk Solutions UK and Ireland. My role in the analytics team focuses on turning complex and large-scale vehicle data into predictive insights that help insurers price policies fairly, reduce fraud, and improve decision-making. I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
 
 										<p>I am also an experienced science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
 										<ul class="actions">
