minor text change

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 										<header class="major">
 											<h2>Bio</h2>
 										</header>
-										<p>I work as a Data Scientist at LexisNexis Risk Solutions UK and Ireland. My role in the analytics team focuses on turning complex and large-scale vehicle data into predictive insights that help insurers price policies fairly, reduce fraud, and improve decision-making. I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
+										<p>I am a Data Scientist at LexisNexis Risk Solutions UK&Is. My role within the analytics team focuses on turning complex and large-scale vehicle data into predictive insights that help insurers price policies fairly, reduce fraud, and improve decision-making. I hold a PhD in astrophysics from Queen's University Belfast. My research focused on observing the Sun and other stars using some of the largest and most advanced telescopes in the world to better understand stellar dynamics. Throughout my PhD I have presented my research at international conferences, and published peer reviewed research, collaborating with colleagues across the globe.</p>
 
 										<p>I am also an experienced science communicator, and have presented to groups of all ages. I have represented Ireland and won awards for science outreach and public engagement. </p>
 										<ul class="actions">
