minor updates to cv

--- a/cv.html
+++ b/cv.html
@@ -132,8 +132,8 @@
 									<h2 class ="cvtitle">Technical Skills</h2>
 								</header>
 									<ul>
-										<li><b>AI &amp; Machine Learning:</b> Agentic AI, LLM Integration, Anomaly Detection, Feature Engineering, HuggingFace, RAG, BERT, GLMs</li>
-										<li><b>Data Privacy &amp; Security:</b> Data Anonymisation/De-identification, Privacy-Preserving Data Linkage, GDPR-compliant Data Design</li>
+										<li><b>AI &amp; Machine Learning:</b> LLMs/li>
+										<li><b>Data Privacy &amp; Security:</b> Data Anonymisation/De-identification, GDPR-compliant Data Design</li>
 										<li><b>Programming:</b> Python (8+ years), SQL (Advanced), Bash, R</li>
 										<li><b>Data Engineering:</b> Azure, High-volume ETL, Parquet, Batch/Stream Processing, AWS</li>
 										<li><b>Specialised Analysis:</b> Time-series signal processing, Sensor fusion, Multi-channel data analysis</li>
